--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
                   
                 </div>
             </div>
+            </div>
         </section>
 
         <!--section3 stay-->
